--- a/ESP8266 V3.3
+++ b/ESP8266 V3.3
@@ -51,9 +51,9 @@ String serverIP = "";
 #define RST_PIN 16
 MFRC522 rfid(SS_PIN, RST_PIN);
 
-//Wlan
-const char *SSID = "Vodafone-A845";
-const char *PASS = "FHRrCFtcCARgPPLR";
+//Hotspot
+const char *SSID = "Moto";
+const char *PASS = "01189998819991197253";
 
 //Localhost
 //String HOSTsendData = "http://192.168.0.194/Admin/sendData.php";
@@ -83,9 +83,32 @@ class LED {
     void ledOn() {
       digitalWrite(pin, HIGH);
     }
+    
     void ledOff() {
       digitalWrite(pin, LOW);
-    }    
+    }
+
+    void ledBlink(int answServer) {
+      unsigned long time;
+      unsigned long futureTime;
+      for (int i = 0; i < answServer; i++) {
+        time = millis()/100;
+        futureTime = time + 10;
+        digitalWrite(pin, HIGH);
+        while (time < futureTime) {
+          time = millis()/100;
+          yield();
+        }
+        digitalWrite(pin, LOW);
+        time = millis()/100;
+        futureTime = time + 10;
+        while (time < futureTime) {
+          time = millis()/100;
+          yield();
+        }
+      }
+    }
+    
 };
 
 LED *ledRot = new LED(0);
@@ -203,7 +226,6 @@ void scanTag() {
 
 //Funktion um die IP Adresse des Webserver herauszufinden
 String serverPath = "/Admin";
-
 String findServer() {
 String ip;
   
@@ -211,8 +233,9 @@ String ip;
   int end = ipBase.lastIndexOf(".");
   ipBase = ipBase.substring(0, end+1);
   Serial.println(ipBase);
-  
-  for (int i = 190; i < 255; i++) {
+
+  //Start ggf. anpassen damit die Suche nicht zu lange dauert !
+  for (int i = 20; i < 255; i++) {
     ip = ipBase + (String) i;
     Serial.println("check at: " + ip + serverPath + "/0118999881999119725.txt");
     if (serverRequest("http://" + ip + serverPath + "/0118999881999119725.txt") == "3") {
@@ -271,6 +294,7 @@ void setup() {
 
   //IP des Servers automatisch suchen
   findServer();
+  
   //Localhost Adressen neu belegen
   HOSTsendData = "http://" + serverIP + "/Admin/sendData.php";
   HOSTsendHeartbeat = "http://" + serverIP + "/Admin/testframe/heartbeat.php";
@@ -329,7 +353,7 @@ void loop() {
         
           if (payload != "1") {
             Serial.println("Zugang verweigert");
-            ledRot->ledOn();
+            ledRot->ledBlink(blinkCount);
             currentTime = millis();
           }
           else {
